<resources>
    <string name="app_name">党建工作</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="refreshing">正在刷新</string>
    <string name="refresh_idle">下拉刷新</string>
    <string name="release_refresh">释放刷新</string>

    <string name="pull_load_more">上拉加载</string>
    <string name="release_load_more">释放加载</string>
    <string name="loading">正在加载</string>
    <string name="no_more">已经没有更多数据</string>


    <string name="tab_home">首页</string>
    <string name="tab_action">互动</string>
    <string name="tab_study">学习</string>
    <string name="tab_manage">事记</string>
    <string name="tab_mine">我的</string>

    <string name="tab_login">登录</string>
    <string name="tab_regist">注册</string>
    <string name="notifyTitle">提示</string>

    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="xieyi"><u>《党建用户协议》</u></string>
</resources>
